test/scc/expr/semantic-errors/151.a
151.t:7:19: error: too many initializer values